# transformer-demo

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
examples/: attention_visualization.py  simple_classification.py
notebooks/: transformer_tutorial.ipynb
src/: __init__.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  attention.py  transformer.py
src/training/: __init__.py  trainer.py  utils.py
src/utils/: __init__.py  visualization.py
tests/: test_models.py
